--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "main": "index.js",
   "author": "Maksim Ilmast",
   "license": "MIT",
+  "scripts": {
+    "calculateBmi": "ts-node bmiCalculator.ts",
+    "calculateExercises": "ts-node exerciseCalculator.ts"
+  },
   "dependencies": {
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
