--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "calculateExercises": "ts-node exerciseCalculator.ts"
   },
   "dependencies": {
+    "@types/node": "^18.8.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   }
