--- a/package.json
+++ b/package.json
@@ -6,11 +6,18 @@
   "license": "MIT",
   "scripts": {
     "calculateBmi": "ts-node bmiCalculator.ts",
-    "calculateExercises": "ts-node exerciseCalculator.ts"
+    "calculateExercises": "ts-node exerciseCalculator.ts",
+    "start": "ts-node index.ts",
+    "dev": "ts-node-dev index.ts"
   },
   "dependencies": {
     "@types/node": "^18.8.3",
+    "express": "^4.18.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.14",
+    "ts-node-dev": "^2.0.0"
   }
 }
