--- a/patientor-backend/package.json
+++ b/patientor-backend/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@types/node": "^18.8.3",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@typescript-eslint/eslint-plugin": "^5.39.0",
     "@typescript-eslint/parser": "^5.39.0",
